<resources>
    <string name="app_name">My Gym Manager</string>
    <string name="nome">Nome:</string>
    <string name="senha">Senha:</string>
    <string name="sobrenome">Sobrenome:</string>
    <string name="salvar_e_ir">Salvar e Ir</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="termos">Termos:</string>
    <string name="lingua_materna">Lingua materna:</string>
    <string name="portugues">Portugues</string>
    <string name="ingles">Inglês</string>
    <string name="espanhol">Espanhol</string>
    <string name="genero">Selecione seu Gênero:</string>
    <string name="torax">Medida do Torax:</string>
    <string name="cintura">Medida do Cintura:</string>
    <string name="qualdril">Medida do Quadril:</string>
    <string name="braco">Medida do Braço:</string>
    <string name="coxa">Medida do Coxa:</string>
    <string name="altura">Medida do Altura:</string>
    <string name="peso">Medida do Peso:</string>
    <string name="atualizar_cadastro">Atualizar Cadastro</string>
    <string name="qtd_repete">Quantidade de repetições</string>
    <string name="descanco">Descanço:</string>
    <!-- TREINO A -->
    <string name="agachamento">Agachamento</string>
    <string name="leg_press">Leg Press</string>
    <string name="extensora">Extensora</string>
    <string name="stiff">Stiff</string>
    <string name="mesa_flexora">Mesa Flexora</string>
    <string name="extensora_lombar">Extensora Lombar</string>
    <string name="panturrilha">Panturrilha</string>
    <!-- TREINO B -->
    <string name="supino">Supino</string>
    <string name="supino_halteres">Supino inclinado com Halteres</string>
    <string name="peck_deck_fly">Peck deck fly</string>
    <string name="desenvolvimento">Desenvolvimento</string>
    <string name="elevacao_lateral">Elevação lateral</string>
    <string name="mergulho">Mergulho</string>
    <string name="tricps_corda">Tríceps Corda</string>
    <!-- TREINO C -->
    <string name="barra_fixa">Barra fixa ou graviton</string>
    <string name="remada_baixa">Remada baixa no triângulo</string>
    <string name="puxada_alta">Puxada alta</string>
    <string name="rosca_alternada">Rosca alternada</string>
    <string name="rosca_direita">Rosca direta no cabo</string>
    <string name="abdominal_crunch">Abdominal crunch máquina</string>
    <string name="abdominal_obliquo">Abdominal oblíquo máquina</string>
    <!-- Repetição -->
    <string name="cinco_vezes">5 X 10</string>
    <string name="quatro_vezes">4 X 10</string>
    <string name="tres_vezes">3 X 10</string>
    <!-- INTERVALO -->
    <string name="intervalo"> 45`` á  1`</string>
    <!-- TIPOS DE TREINOS -->
    <string name="treino_a_desc">Treino A</string>
    <string name="treino_b_desc">Treino B</string>
    <string name="treino_c_desc">Treino C</string>
    <!-- AUTORIA -->
    <string name="curso">Curso:</string>
    <string name="email">E-mail:</string>
    <string name="utfpr">Universidade Tecnologica Federal do Paraná</string>
    <string name="criador">Criador:</string>
    <string name="formacao">Formação:</string>
    <string name="label_bio">Biografia:</string>
    <string name="id_text_biografia">Minha Biografia vai estar aqui aguarde!!</string>
    <!-- STRING ARRAYS -->
    <string-array name="treino_a">
        <item>@string/agachamento</item>
        <item>@string/leg_press</item>
        <item>@string/extensora</item>
        <item>@string/stiff</item>
        <item>@string/mesa_flexora</item>
        <item>@string/extensora_lombar</item>
        <item>@string/panturrilha</item>
    </string-array>
    <string-array name="repeticao_a">
        <item>@string/cinco_vezes</item>
        <item>@string/quatro_vezes</item>
        <item>@string/tres_vezes</item>
        <item>@string/quatro_vezes</item>
        <item>@string/tres_vezes</item>
        <item>@string/tres_vezes</item>
        <item>@string/quatro_vezes</item>
    </string-array>
    <string-array name="treino_b">
        <item>@string/supino</item>
        <item>@string/supino_halteres</item>
        <item>@string/peck_deck_fly</item>
        <item>@string/desenvolvimento</item>
        <item>@string/elevacao_lateral</item>
        <item>@string/mergulho</item>
        <item>@string/tricps_corda</item>
    </string-array>
    <string-array name="repeticao_b">
        <item>@string/cinco_vezes</item>
        <item>@string/quatro_vezes</item>
        <item>@string/tres_vezes</item>
        <item>@string/quatro_vezes</item>
        <item>@string/tres_vezes</item>
        <item>@string/quatro_vezes</item>
        <item>@string/tres_vezes</item>
    </string-array>
    <string-array name="treino_c">
        <item>@string/barra_fixa</item>
        <item>@string/remada_baixa</item>
        <item>@string/puxada_alta</item>
        <item>@string/rosca_alternada</item>
        <item>@string/rosca_direita</item>
        <item>@string/abdominal_crunch</item>
        <item>@string/abdominal_obliquo</item>
    </string-array>
    <string-array name="repeticao_c">
        <item>@string/cinco_vezes</item>
        <item>@string/quatro_vezes</item>
        <item>@string/tres_vezes</item>
        <item>@string/quatro_vezes</item>
        <item>@string/tres_vezes</item>
        <item>@string/tres_vezes</item>
        <item>@string/tres_vezes</item>
    </string-array>
    <string-array name="intervalo_universal">
        <item>@string/intervalo</item>
        <item>@string/intervalo</item>
        <item>@string/intervalo</item>
        <item>@string/intervalo</item>
        <item>@string/intervalo</item>
        <item>@string/intervalo</item>
        <item>@string/intervalo</item>
    </string-array>
</resources>
