<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/id_treino_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/nome" />

    <TextView
        android:id="@+id/id_treino_repete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qtd_repete" />

    <TextView
        android:id="@+id/id_treino_descanso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descanco" />
</LinearLayout>